--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="favorite">Add to Favorites</string>
     <string name="order">Order Animes</string>
     <string name="movie_not_released">Movie not released yet</string>
-    <string name="test">%s - %s</string>
+    <string name="anime_title">%s</string>
     <string name="skip_loading">Skip Intro</string>
     <string name="total_episodes">%s Episodes</string>
     <string name="video_quality">Video Quality</string>
@@ -57,4 +57,5 @@
     <string name="playback_speed">Playback Speed</string>
     <string name="quality">Quality</string>
     <string name="title_settings">Settings</string>
+    <string name="img">img</string>
 </resources>
